fix alignment of single-column copy

--- a/src/app/components/join-us/_index.scss
+++ b/src/app/components/join-us/_index.scss
@@ -47,6 +47,10 @@
       }
     }
 
+    .content {
+      text-align: left;
+    }
+
     @include susy-breakpoint($bp-medium, $susy) {
       padding-top: 100px;
       padding-bottom: 100px;
