--- a/src/app/components/single-column/_index.scss
+++ b/src/app/components/single-column/_index.scss
@@ -37,7 +37,7 @@
     max-width: 680px;
     margin: 0 auto;
     font-size: 20px;
-    text-align: left;
+    text-align: center;
   }
 
   &:first-of-type {
